# obs-scene-as-transition

./: CHANGELOG.md  CMakeLists.txt  README.md  buildspec.json  installer.iss.in  scene-as-transition.c  scene-as-transition.rc  version.h
.github/scripts/utils.zsh/: check_linux  check_macos  check_packages  log_debug  log_error  log_info  log_output  log_status  log_warning  mkcd  read_codesign  read_codesign_installer  read_codesign_pass  read_codesign_user  set_loglevel  setup_ccache  setup_linux  setup_macos  setup_obs
.github/workflows/: build.yml
data/locale/: da-DK.ini  de-DE.ini  en-GB.ini  en-US.ini  es-ES.ini  ja-JP.ini  nl-NL.ini  pt-BR.ini
